--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,11 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: build and push to docker
-        uses: docker/build-push-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ github.repository }}
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: ${{ github.sha }}
+        uses: mr-smithers-excellent/docker-build-push@v5
+          with:
+            image: docker-hub-repo/image-name
+            registry: docker.io
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_PASSWORD }}
+            tags: ${{ github.sha }}
