--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,7 +9,7 @@ jobs:
       - name: build and push to docker
         uses: mr-smithers-excellent/docker-build-push@v5
         with:
-          image: docker-hub-repo/image-name
+          image: miguekos1233/image-name
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
